--- a/files/responsive.css
+++ b/files/responsive.css
@@ -1,19 +1,172 @@
-/* Default styles for larger screens */
+
 body {
     font-size: 18px;
+    
+  }
+  .column-pro {
+    width: 100%; 
+    float: left;
+    padding: 10px;
+    box-sizing: border-box;
   }
   
-  /* Tablet screens */
+
   @media (max-width: 768px) {
     body {
       font-size: 16px;
+      margin: 0;
+      padding: 0;
+      
     }
+    .menu{
+      display:block;
+    }
+    .menu a{
+      display:block;
+      text-align:center;
+      padding:10px;
+      text-decoration: none;
+      color:#fff;
+      font-size: 20px;
+      font-weight: bold;
+
+    }
+    .navBar ul{
+     display: none;
+
+    }
+    .navBar.open ul {
+      display: block;
+      list-style: none;
+      padding: 0;
+      margin: 0;
+      background-color: rgb(142, 148, 235); 
+      position: absolute;
+      top: 100%; 
+      right: 0;
+      width: 50%;
+    }
+    .navBar ul li {
+      padding: 10px;
+      text-align: center;
+    }
+    
+    .navBar ul li a {
+      color: black;
+      text-decoration: none;
+      font-size: 18px;
+      font-weight: bold;
+      display: block;
+      padding: 10px;
+      text-align: center;
+      
+
+    }
+    .home {
+      margin: auto;
+    }
+    .image-responsive img {
+      width: 150px;
+      height: 200px;
+      border-radius: 40%;
+      animation: moveUpDown 2s infinite;
+    }
+    .image-responsive{
+      display: block;
+      float:left;
+      
+      text-align: center;
+      padding: 20px;
+      
+    }
+    .home{
+      display: block;
+      float: left;
+      width: 50%;
+      text-align: center;
+      padding: 20px;
+    }
+    .words-section{
+      display: block;
+      float: left;
+      width: 100%;
+      text-align: center;
+      padding: 20px;
+    }
+    .words-section h3 strong{
+      font-size: 20px;
+      color: #11a372;
+      letter-spacing: 1px;
+      font-weight: bold;
+    }
+    .image-section{
+      display: none;
+    }
+    .image-responsive {
+      display: block;
+    }
+    /* .about-image img {
+      width: 300px;
+      height: 400px;
+      box-shadow: 0 0 10px #4f5359;
+    } */
+    #about {
+      display: block;
+      justify-content: center;
+      width: 100%;
+      height: 100%;
+
+    }
+    .about-content {
+      position: relative;
+      right: auto;
+      
+      
+    }
+    .my-fovourite-tech{
+      display: block;
+      justify-content: center;
+      text-align: center;
+      margin-bottom: 90px;
+      margin-top: 60px;
+    }
+    .my-fovourite-tech span {
+      margin-bottom: 5px;
+    }
+    .row-pro1 {
+      display: block;
+      justify-content: center;
+      text-align: center;
+      margin-bottom: 90px;
+      margin-top: 60px;
+      width: 100%;
+      height: 100%;
+
+    }
+    
+    #projects .row-pro1 {
+      
+      display: block;
+      
+      width: 100%;
+  }
+  #projects .column-pro .card{
+    width: 100%;
+    height: 100%;
+    overflow:hidden;
+    border-radius: 20px;
+    border: 8px solid #ffffff;
+    position: relative;
+    margin-bottom: 1px;
+    box-shadow: 0 0 40px rgba(0, 0, 0, 0.12);
+
+  }
+  .dot{
+    display: none;
   }
   
-  /* Mobile screens */
-  @media (max-width: 480px) {
-    body {
-      font-size: 14px;
-    }
-  }
   
+}
+  
+
+
