--- a/files/style.css
+++ b/files/style.css
@@ -1,8 +1,8 @@
-* {
+/* * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-  }
+  } */
   
   body {
     width: 100%;
@@ -17,6 +17,7 @@
     background-color: #0b0334;
     
     display: flex;
+    width: 100%;
     align-items: center;
     justify-content: space-around;
     height: 14vh;
@@ -76,6 +77,13 @@
     color: #11a372;
     transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out;
   }
+  .menu {
+    display: none
+  }
+  .image-responsive {
+    display: none;
+  }
+  
   
   .sticky {
     height: 40px;
@@ -86,6 +94,7 @@
   }
   
   #home {
+    position: relative;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -93,6 +102,7 @@
     background-image: url("/my-portfolio/images/main-backg-image.jpg");
     background-repeat: no-repeat;
     background-size: cover;
+    right: 50px;
     min-height: 100vh;
     width: 100%;
   }
@@ -129,7 +139,7 @@
   
   .words-section p {
     opacity: 0.7;
-    font-size: 14px;
+    font-size: 15px;
     margin-bottom: 30px;
     font-style: italic;
   }
