--- a/files/responsive.css
+++ b/files/responsive.css
@@ -177,6 +177,15 @@ body {
   
   
 }
+@media(max-width: 480px){
+  body {
+    font-size: 14px;
+  }
+  #home{
+    width: 100%;
+    padding: 10px
+  }
+}
   
 
 
