--- a/files/responsive.css
+++ b/files/responsive.css
@@ -180,6 +180,9 @@ body {
     width: 100%;
     margin: auto;
   }
+  #me {
+    display: block;
+  }
   
   
 }
@@ -195,7 +198,15 @@ body {
   .page-container .row{
     display: block;
     width: 100%;
-    margin: auto;
+    margin-right: 20px 
+  }
+  #about {
+    position: relative;
+    right: 10px;
+    width: 100%;
+    height: 100%;
+    
+
   }
 
 }
