--- a/files/responsive.css
+++ b/files/responsive.css
@@ -200,12 +200,12 @@ body {
     width: 100%;
     margin-right: 20px 
   }
-  #about {
+  /* #about {
     position: relative;
     right: 10px;
     width: 80%;
     height: 100%;
-  }
+  } */
   .design-words{
     position: relative;
     right: 10px;
