--- a/files/responsive.css
+++ b/files/responsive.css
@@ -200,12 +200,11 @@ body {
     width: 100%;
     margin-right: 20px 
   }
-  /* #about {
-    position: relative;
-    right: 10px;
-    width: 80%;
-    height: 100%;
-  } */
+  #about {
+    min-height: 100vh;
+    width: 100%;
+    background-color: #e8e8e8;
+  }
   .design-words{
     position: relative;
     right: 10px;
