--- a/files/responsive.css
+++ b/files/responsive.css
@@ -204,6 +204,8 @@ body {
     min-height: 100vh;
     width: 100%;
     background-color: #e8e8e8;
+    padding-left: 10px;
+    padding-right: 10px;
   }
   .design-words{
     position: relative;
