--- a/files/responsive.css
+++ b/files/responsive.css
@@ -207,7 +207,7 @@ body {
     
   }
   .about-content{
-    padding-left: 10px;
+    margin: auto;
     padding-right: 20px;
   }
   .about-image img{
