--- a/files/responsive.css
+++ b/files/responsive.css
@@ -213,6 +213,7 @@ body {
   .about-image img{
     position: relative;
     left: 30px;
+    top: 50px
   }
   .design-words{
     position: relative;
@@ -220,6 +221,10 @@ body {
   }
   .counter {
     padding-right: 20px;
+  }
+  .addresses {
+    width: 60%;
+    left: 20px
   }
 
 }
