--- a/files/responsive.css
+++ b/files/responsive.css
@@ -213,7 +213,7 @@ body {
   .about-image img{
     position: relative;
     left: 30px;
-    top: 50px
+    bottom: 100px
   }
   .design-words{
     position: relative;
