--- a/files/responsive.css
+++ b/files/responsive.css
@@ -213,12 +213,12 @@ body {
   .about-image img{
     position: relative;
     left: 30px;
-    bottom: 100px
+    bottom: 80px
   }
   .design-words{
     position: relative;
     right: 50px;
-    bottom: 100px;
+    bottom: 70px;
   }
   .counter {
     padding-right: 20px;
@@ -226,6 +226,10 @@ body {
   .addresses {
     width: 60%;
     left: 20px
+  }
+  .about-words h1 {
+    text-align: center;
+    bottom: 90px;
   }
 
 }
