--- a/files/responsive.css
+++ b/files/responsive.css
@@ -226,10 +226,12 @@ body {
     padding-right: 20px;
   }
   .addresses {
+    position: relative;
     width: 60%;
     left: 20px
   }
   .about-words h1 {
+    position: relative;
     text-align: center;
     bottom: 140px;
   }
