--- a/files/responsive.css
+++ b/files/responsive.css
@@ -213,8 +213,8 @@ body {
   }
   .about-image img{
     position: relative;
-    left: 30px;
-    bottom: 80px
+    /* left: 30px; */
+    top: 80px
   }
   .design-words{
     position: relative;
