--- a/files/responsive.css
+++ b/files/responsive.css
@@ -229,11 +229,11 @@ body {
     position: relative;
     width: 60%;
   } */
-  /* .about-words h1 {
+  .about-words h1 {
     position: relative;
     text-align: center;
     bottom: 50%;
-  } */
+  }
 
 }
   
