--- a/files/responsive.css
+++ b/files/responsive.css
@@ -216,12 +216,12 @@ body {
     /* left: 30px; */
     /* top: 80px
   } */
-  /* .design-words{
+  .design-words{
     position: relative;
     right: 50px;
-    bottom: 100px;
+    bottom: 20%;
     
-  } */
+  }
   .counter {
     padding-right: 20px;
   }
@@ -232,7 +232,7 @@ body {
   .about-words h1 {
     position: relative;
     text-align: center;
-    bottom: 20%;
+    bottom: 30%;
   }
 
 }
