--- a/files/responsive.css
+++ b/files/responsive.css
@@ -183,7 +183,16 @@ body {
   #me {
     display: block;
   }
-  
+  .new_container {
+    display: block;
+    margin: auto;
+    padding: 30px;
+  }
+  .make-design {
+    margin-bottom: 20px;
+    width: 100%;
+  }
+ 
   
 }
 @media(max-width: 480px){
@@ -233,6 +242,15 @@ body {
     position: relative;
     text-align: center;
     bottom: 30%;
+  }
+  .new_container {
+    display: block;
+    margin: auto;
+    padding: 30px;
+  }
+  .make-design {
+    margin-bottom: 20px;
+    width: 100%;
   }
 
 }
