--- a/files/style.css
+++ b/files/style.css
@@ -86,7 +86,7 @@ body {
   #home {
     position: relative;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     color: #333;
     background-image: url("/my-portfolio/images/main-backg-image.jpg");
