--- a/files/responsive.css
+++ b/files/responsive.css
@@ -11,183 +11,203 @@ body {
   }
   
 
-  @media (max-width: 768px) {
-    body {
-      font-size: 16px;
-      margin: 0;
-      padding: 0;
-      
-    }
-    .menu{
-      display:block;
-    }
-    .menu a{
-      display:block;
-      text-align:center;
-      padding:10px;
-      text-decoration: none;
-      color:#fff;
-      font-size: 20px;
-      font-weight: bold;
-
-    }
-    .navBar ul{
-     display: none;
-
-    }
-    .navBar.open ul {
-      display: block;
-      list-style: none;
-      padding: 0;
-      margin: 0;
-      background-color: rgb(142, 148, 235); 
-      position: absolute;
-      top: 100%; 
-      right: 0;
-      width: 50%;
-    }
-    .navBar ul li {
-      padding: 10px;
-      text-align: center;
-    }
+@media (max-width: 768px) {
+  body {
+    font-size: 16px;
+    margin: 0;
+    padding: 0;
     
-    .navBar ul li a {
-      color: black;
-      text-decoration: none;
-      font-size: 18px;
-      font-weight: bold;
-      display: block;
-      padding: 10px;
-      text-align: center;
-      
+  }
+  .menu{
+    display:block;
+  }
+  .menu a{
+    display:block;
+    text-align:center;
+    padding:10px;
+    text-decoration: none;
+    color:#fff;
+    font-size: 20px;
+    font-weight: bold;
 
-    }
-    .home {
-      margin: auto;
-    }
-    .image-responsive img {
-      width: 150px;
-      height: 200px;
-      border-radius: 40%;
-      animation: moveUpDown 2s infinite;
-    }
-    .image-responsive{
-      display: block;
-      float:left;
-      
-      text-align: center;
-      padding: 20px;
-      
-    }
-    .home{
-      display: block;
-      float: left;
-      width: 50%;
-      text-align: center;
-      padding: 20px;
-    }
-    .words-section{
-      display: block;
-      float: left;
-      width: 100%;
-      text-align: center;
-      padding: 20px;
-    }
-    .words-section h3 strong{
-      font-size: 20px;
-      color: #11a372;
-      letter-spacing: 1px;
-      font-weight: bold;
-    }
-    .image-section{
-      display: none;
-    }
-    .image-responsive {
-      display: block;
-    }
-    
-    #about {
-      display: block;
-      justify-content: center;
-      width: 100%;
-      height: 100%;
-
-    }
-    .about-content {
-      position: relative;
-      right: auto;
-      
-      
-    }
-    .my-fovourite-tech{
-      display: block;
-      justify-content: center;
-      text-align: center;
-      margin-bottom: 90px;
-      margin-top: 60px;
-    }
-    .my-fovourite-tech span {
-      margin-bottom: 5px;
-    }
-    .row-pro1 {
-      display: block;
-      justify-content: center;
-      text-align: center;
-      margin-bottom: 90px;
-      margin-top: 60px;
-      width: 100%;
-      height: 100%;
-
-    }
-    #projects {
-    padding-left: 20px;
-    padding-right: 30px;
-    height: 0%;
-    }
-    
-    #projects .row-pro1 {
-      
-      display: block;
-      
-      width: 100%;
-    }
-
-    #projects .column-pro{
-    align-items: center;
-    margin-top: 40px;
-    width: 100%;
-
-    }
-    #projects .column-pro .card {
-    display: block;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-    }
-    #projects.row-pro.section-head, p {
-    margin: auto;
-    }
-    .dot{
+  }
+  .navBar ul{
     display: none;
-    }
 
-    .page-container .row{
+  }
+  .navBar.open ul {
     display: block;
-    width: 100%;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    background-color: rgb(142, 148, 235); 
+    position: absolute;
+    top: 100%; 
+    right: 0;
+    width: 50%;
+  }
+  .navBar ul li {
+    padding: 10px;
+    text-align: center;
+  }
+    
+  .navBar ul li a {
+    color: black;
+    text-decoration: none;
+    font-size: 18px;
+    font-weight: bold;
+    display: block;
+    padding: 10px;
+    text-align: center;
+    
+
+  }
+  .home {
     margin: auto;
-    }
-    #me {
+  }
+  .image-responsive img {
+    width: 150px;
+    height: 200px;
+    border-radius: 40%;
+    animation: moveUpDown 2s infinite;
+  }
+  .image-responsive{
     display: block;
-    }
-    .new_container {
+    float:left;
+    
+    text-align: center;
+    padding: 20px;
+    
+  }
+  .home{
     display: block;
-    margin: auto;
-    padding: 30px;
-    }
-    .make-design {
-    margin-bottom: 20px;
+    float: left;
+    width: 50%;
+    text-align: center;
+    padding: 20px;
+  }
+  .words-section{
+    display: block;
+    float: left;
     width: 100%;
-    }
+    text-align: center;
+    padding: 20px;
+  }
+  .words-section h3 strong{
+    font-size: 20px;
+    color: #11a372;
+    letter-spacing: 1px;
+    font-weight: bold;
+  }
+  .image-section{
+    display: none;
+  }
+  .image-responsive {
+    display: block;
+  }
+    
+  #about {
+    display: block;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+
+  }
+  .about-content {
+    position: relative;
+    right: auto;
+    
+    
+  }
+  .my-fovourite-tech{
+    display: block;
+    justify-content: center;
+    text-align: center;
+    margin-bottom: 90px;
+    margin-top: 60px;
+  }
+  .my-fovourite-tech span {
+    margin-bottom: 5px;
+  }
+  .row-pro1 {
+    display: block;
+    justify-content: center;
+    text-align: center;
+    margin-bottom: 90px;
+    margin-top: 60px;
+    width: 100%;
+    height: 100%;
+
+  }
+  #projects {
+  padding-left: 20px;
+  padding-right: 30px;
+  height: 0%;
+  }
+  
+  #projects .row-pro1 {
+    
+    display: block;
+    
+    width: 100%;
+  }
+
+  #projects .column-pro{
+  align-items: center;
+  margin-top: 40px;
+  width: 100%;
+
+  }
+  #projects .column-pro .card {
+  display: block;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  }
+  #projects.row-pro.section-head, p {
+  margin: auto;
+  }
+  .dot{
+  display: none;
+  }
+
+  .page-container .row{
+  display: block;
+  width: 100%;
+  margin: auto;
+  }
+  #me {
+  display: block;
+  }
+  .new_container {
+  display: block;
+  margin: auto;
+  padding: 30px;
+  }
+  .make-design {
+  margin-bottom: 20px;
+  width: 100%;
+  }
+  .my-fovourite-tech{
+    display: block;
+    margin-bottom: 230px;
+    border: 1px dotted grey;
+  }
+  .my-fovourite-tech span {
+    position: relative;
+    width: 100%;
+    margin-top: 20px;
+    left: 20%
+
+
+  }
+  .my-fovourite-tech h1 {
+    position: relative;
+    margin-bottom: 70px;
+    margin-top: 30px;
+    right: 20px;
+    color: blue;
+  }
  
   
 }
