--- a/files/skills.css
+++ b/files/skills.css
@@ -2,12 +2,15 @@
     width: auto;
     background-color: #fff;
     padding: 20px;
-    margin: 0px;
-    /* border-radius: 5px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2); */
+    margin-left: 60px;
+    
 }
 
+#skill h2 {
+    text-align: center;
+    margin-bottom: 20px;
 
+}
 .skill-name {
     font-weight: bold;
 }
@@ -33,7 +36,7 @@
         width: 0;
     }
     to {
-        width: calc(var(--level) *1%);
+        width: var(var(--level) *1%);
     }
 } 
 
