--- a/files/responsive.css
+++ b/files/responsive.css
@@ -239,15 +239,15 @@ body {
   .about-words h1 {
     position: relative;
     text-align: center;
-    bottom: 30%;
+    bottom: 40%;
   }
   .about-me {
     position: relative;
-    top: 20%;
+    bottom: 80%;
   }
   .about-image img{
     position: relative;
-    top:10%
+    top:60%
   }
   .new_container {
     display: block;
@@ -257,6 +257,26 @@ body {
   .make-design {
     margin-bottom: 20px;
     width: 100%;
+  }
+  .my-fovourite-tech{
+    display: block;
+    margin-bottom: 230px;
+    border: 1px dotted grey;
+  }
+  .my-fovourite-tech span {
+    position: relative;
+    width: 100%;
+    margin-top: 20px;
+    left: 20%
+
+
+  }
+  .my-fovourite-tech h1 {
+    position: relative;
+    margin-bottom: 70px;
+    margin-top: 30px;
+    right: 20px;
+    color: blue;
   }
 
 }
