--- a/files/about.css
+++ b/files/about.css
@@ -14,12 +14,17 @@
     padding: 60px;
     color: black;
     
+    
+    
 
   }
   .about-content {
+      border: 1px dotted grey;
       display: flex;
       justify-content: center;
       align-items: center;
+      margin-bottom: 20px;
+      padding: 20px;
     }
     
     .about-image {
@@ -30,7 +35,7 @@
     
     .about-image img {
      position: relative;
-     right: 50px; 
+     right: 200px; 
     } 
     
     .about-words {
@@ -48,7 +53,7 @@
     }
     
     .about-words .address{
-      margin-left: 100px;
+      margin-left: 50px;
       font-family: Arial, Helvetica, sans-serif;
     }
   
