--- a/files/responsive.css
+++ b/files/responsive.css
@@ -116,6 +116,7 @@ body {
   .about-content {
     position: relative;
     right: auto;
+    padding-right: 20%;
     
     
   }
@@ -272,6 +273,7 @@ body {
 
   }
   .my-fovourite-tech h1 {
+    display: block;
     position: relative;
     margin-bottom: 70px;
     margin-top: 30px;
