--- a/files/responsive.css
+++ b/files/responsive.css
@@ -237,18 +237,14 @@ body {
     padding-right: 205;
   }
  
-  .about-words h1 {
+  /* .about-words h1 {
     position: relative;
     text-align: center;
     bottom: 40%;
-  }
-  /* .about-me {
-    position: relative;
-    bottom: 20%;
   } */
+  
   .about-image img{
-    position: relative;
-    top:90%
+    display: none;
   }
   .new_container {
     display: block;
