--- a/files/responsive.css
+++ b/files/responsive.css
@@ -276,6 +276,14 @@ body {
     right: 20px;
     color: blue;
   }
+  .about-content {
+    border: 1px dotted grey;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 20px;
+    padding: 20px;
+  }
 
 }
   
