--- a/files/responsive.css
+++ b/files/responsive.css
@@ -282,12 +282,7 @@ body {
   }
   #about {
     position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 20px;
-    padding: 20px;
-    left: 10px
+    left: 20%;
   }
 
 }
