--- a/files/about.css
+++ b/files/about.css
@@ -18,30 +18,26 @@
     
 
   }
-  /* .about-words{
-    border: none;
-    left: 200px;
-    margin-bottom: 20px;
-  } */
+
   .about-content {
-      border: 1px dotted grey;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      margin-bottom: 20px;
-      padding: 20px;
-    }
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 20px;
+    padding: 20px;
+  }
     
     .about-image {
-      margin-left: 180px;
+      margin-right: 100px;
       
     }
     
     
-    .about-image img {
+    /* .about-image img {
      position: relative;
      right: 200px; 
-    } 
+    }  */
     
     .about-words {
       position: relative;
@@ -60,7 +56,7 @@
     .about-words .address{
       margin-left: 50px;
       font-family: Arial, Helvetica, sans-serif;
-    }
+    } 
   
     .about-words p {
       opacity: 0.7;
@@ -87,7 +83,7 @@
       width: 50%;
       opacity: 0.7;
       font-size: 15px;
-    }
+    } */
     
     .about-words h2 {
       font-size: 30px;
@@ -116,6 +112,8 @@
       color: #fff;
       text-decoration: none;
     }
+  
+  
   
     .my-fovourite-tech{
       margin-top: 20px;
