--- a/files/responsive.css
+++ b/files/responsive.css
@@ -246,11 +246,7 @@ body {
     right: 70%
   }
  
-  /* .about-words h1 {
-    position: relative;
-    text-align: center;
-    bottom: 40%;
-  } */
+  
   
   .about-image img{
     display: none;
@@ -284,6 +280,12 @@ body {
     margin-top: 30px;
     right: 20px;
     color: blue;
+  }
+  .about-content {
+    position: relative;
+    margin-right: 400px;
+    
+    
   }
    
   
