--- a/files/about.css
+++ b/files/about.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
   }
   
-  #about {
+  #about {  /* designing the #about container */
     min-height: 100vh;
     width: 100%;
     background-color: #e8e8e8;
@@ -33,11 +33,6 @@
       
     }
     
-    
-    /* .about-image img {
-     position: relative;
-     right: 200px; 
-    }  */
     
     .about-words {
       position: relative;
